	
	FIM NEWS -- history of main user-visible changes in FIM.

                Version 0.6-trunk

# (r1700)
 * With SDL (-o sdl), center window by default.
# (r1693)
 * fix: pressing keys "1n1n" will not execute 'n' 11 times but twice.
# (r1689)
 * configure --enable-debug is developer option now.
# (r1679-r1688)
 * libcaca (-o caca) mode is working again, with limitations.
# (r1677,r1678)
 * Slideshow function (e.g `fim --slideshow=5 *.jpg`) now more responsive.
# (r1662)
 * Arrow keys are now working in aalib (-o aa).
# (r1649)
 * Bugfix with aalib (-o aa): don't truncate long lines.
# (r1641)
 * Avoid leak in language parser.
# (r1644-r1646)
 * Avoid console buffer memory corruption.
# (r1626)
 * Eliminate a memory leak from file loading code. 
# (r1625,r1637,r1657,r1658,r1661,r1665,r1666)
 * Eliminate memory leaks in PNG, JPG, TIFF, EXIF, and font decoding code.
# (r1624,r1650)
 * fix possibly broken `make -j` in rebuilding fimgs.man and fimrc.man.
# (r1623)
 * correct configure script check for regcomp() -- could lead to false negatives.
# (r1621)
 * Don't break build on missing 'gs'.
# (r1616,r1659,r1660,r1667)
 * Using --load-shadow-dir <dir> adds a shadow directory (experimental).
   Then 'scale "shadow"' (bound to key '"') will substitute the current displayed image with that 
   of the first same-named file located under a shadow directory.
# (r1615)
 * Default "_pushdir_re" variable matches now .webp filename extension when loading a directory.
# (r1613)
 * fix: fim -c '/<pattern>' was broken.
# (r1605)
 * added " INTEGER , INTEGER IDENTIFIER arguments" syntax to repeat a command 
   on each file in the interval and substitute its name to '{}' in the arguments
   to an iterated command IDENTIFIER.
   (FIXME: undocumented)
# (r1599--r1602)
 * keeping a key pressed accelerate goto (experimental).
# (r1594)
 * internal: fix: piping from external commands was using 0 instead of 'WNOHANG', leading to hanging.
# (r1585)